home page accordion content alignments fixed

--- a/src/pages/home-page/home.scss
+++ b/src/pages/home-page/home.scss
@@ -124,6 +124,7 @@
         display: flex;
         align-items: center;
         gap: 2rem;
+        width: 30vw;
 
         .bank-logo-container{
           width: 4rem;
